work ethics spacing text fix

--- a/css/jpeg-dealers-retro-desktop.css
+++ b/css/jpeg-dealers-retro-desktop.css
@@ -292,7 +292,7 @@ a {
   top: auto;
   display: none;
   overflow: visible;
-  width: 30rem;
+  width: 35rem;
   height: 90vh;
   background-color: transparent;
   background-image: url('../images/white-crinkled-paper-texture_.webp');
@@ -842,7 +842,7 @@ a {
   display: flex;
   width: 100%;
   padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -897,6 +897,7 @@ a {
 
 .textwrapper {
   overflow: visible;
+  margin-bottom: 30px;
 }
 
 .bold-text {
